tests/negative/comptime/cast_float_to_int_oob.orng
//
fn main() -> Int {
    comptime { 9223372036854775808.0 as Int }
}